# gui

./: CMakeLists.txt  minebot_gui.launch  package.xml  plugin.xml
include/: minebot_gui.h  popup.h
resource/: minebot_gui.ui
scripts/: minebot_gui.py
src/: minebot_gui.cpp  popup.cpp
